cambios interfaces de ultima revision 7/11/23

--- a/admin/administrar_practicantes.html
+++ b/admin/administrar_practicantes.html
@@ -88,7 +88,7 @@
             <div class="col-12 mx-auto">
               <div class="card">
                 <div class="card-header">
-                  <h3 class="card-title">LISTA DE TAEKWONDISTAS</h3>
+                  <h3 class="card-title">LISTA DE PRACTICANTES</h3>
                   <div class="card-tools">
                     <div class="row">
                       <div class="input-group input-group" style="width: 300px;">
@@ -100,7 +100,7 @@
                         </div>
                       </div>
                       <div class="ml-3">
-                        <a href="agregar_taekwondista.html" class="btn btn-success float-right"><i
+                        <a href="agregar_practicante.html" class="btn btn-success float-right"><i
                             class="fas fa-plus"></i>
                           Agregar</a>
                       </div>
@@ -130,7 +130,7 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                            <a href="editar_practicante.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
                           </div>
@@ -144,7 +144,7 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                            <a href="editar_practicante.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
                           </div>
@@ -158,7 +158,7 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                            <a href="editar_practicante.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
                           </div>
@@ -172,7 +172,7 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                            <a href="editar_practicante.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
                           </div>
@@ -186,7 +186,7 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                            <a href="editar_practicante.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
                           </div>
@@ -200,7 +200,7 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                            <a href="editar_practicante.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
                           </div>
@@ -214,7 +214,7 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                            <a href="editar_practicante.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
                           </div>
@@ -228,7 +228,7 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                            <a href="editar_practicante.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
                           </div>
@@ -244,7 +244,7 @@
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h4 class="modal-title">Informacion Taekwondista</h4>
+                        <h4 class="modal-title">Informacion Practicante</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
@@ -292,13 +292,13 @@
                   <div class="modal-dialog">
                     <div class="modal-content bg-danger">
                       <div class="modal-header">
-                        <h4 class="modal-title">Eliminar Taekwondista</h4>
+                        <h4 class="modal-title">Eliminar Practicante</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
                       <div class="modal-body">
-                        <p>Estas seguro que desea eliminar este Taekwondista? &hellip;</p>
+                        <p>Estas seguro que desea eliminar este Practicante? &hellip;</p>
                       </div>
                       <div class="modal-footer justify-content-between">
                         <button type="button" class="btn btn-outline-light" data-dismiss="modal">Cancelar</button>
