--- a/admin/editar_practicante.html
+++ b/admin/editar_practicante.html
@@ -100,36 +100,36 @@
           <div class="col-md-12 mx-auto">
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">FORMULARIO TAEKWONDISTAS</h3>
+                <h3 class="card-title">FORMULARIO PRACTICANTE</h3>
               </div>
               <form>
                 <div class="card-body">
                   <div class="row">
                     <div class="form-group col-6">
                       <label>Nombre</label>
-                      <input type="text" class="form-control" placeholder="Ingrese su nombre">
+                      <input type="text" class="form-control" placeholder="Ingrese su nombre" value="Lucas Matias">
                     </div>
                     <div class="form-group col-6">
                       <label>Apellido</label>
-                      <input type="text" class="form-control" placeholder="Ingrese su apellido">
+                      <input type="text" class="form-control" placeholder="Ingrese su apellido" value="Godoy Cabrera">
                     </div>
                   </div>
                   <div class="form-group">
                     <label>Correo electronico</label>
-                    <input type="text" class="form-control" placeholder="Ingrese su correo electronico">
+                    <input type="text" class="form-control" placeholder="Ingrese su correo electronico" value="lucasmgodoycabrera@hotmail.com">
                   </div>
                   <div class="row">
                     <div class="form-group col-4">
                       <label>DNI</label>
-                      <input type="text" class="form-control" placeholder="Ingrese su DNI">
+                      <input type="text" class="form-control" placeholder="Ingrese su DNI" value="4327343212">
                     </div>
                     <div class="form-group col-4">
                       <label for="exampleInputEmail1">Peso (kg)</label>
-                      <input type="text" class="form-control" placeholder="Ingrese su Peso">
+                      <input type="text" class="form-control" placeholder="Ingrese su Peso" value="73.3">
                     </div>
                     <div class="form-group col-4">
                       <label>Altura (cm)</label>
-                      <input type="number" class="form-control" placeholder="Ingrese su Altura">
+                      <input type="number" class="form-control" placeholder="Ingrese su Altura" value="176">
                     </div>
                   </div>
                   <div class="row">
@@ -137,7 +137,7 @@
                       <label>Fecha de Nacimiento</label>
                       <div class="input-group date" id="reservationdate" data-target-input="nearest">
                         <input type="text" class="form-control datetimepicker-input" data-target="#reservationdate"
-                          control-id="ControlID-4" placeholder="dd/mm/yyyy" />
+                          control-id="ControlID-4" placeholder="dd/mm/yyyy" value="11/08/2000"/>
                         <div class="input-group-append" data-target="#reservationdate" data-toggle="datetimepicker">
                           <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                         </div>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="form-group col-4">
                       <label>Nacionalidad</label>
-                      <input type="text" class="form-control" placeholder="Ingrese su Nacionalidad">
+                      <input type="text" class="form-control" placeholder="Ingrese su Nacionalidad" value="Argentina">
                     </div>
                     <div class="form-group col-4">
                       <label>Genero</label>
@@ -159,11 +159,11 @@
                   <div class="form-group">
                     <label>Categoria</label>
                     <select class="form-control select2" style="width: 100%;">
-                      <option disabled selected>Seleccione el color del cinto</option>
+                      <option disabled>Seleccione el color del cinto</option>
                       <option>Blanco</option>
                       <option>Blanco punta Amarilla</option>
                       <option>Amarillo</option>
-                      <option>Amarillo punta Verde</option>
+                      <option selected>Amarillo punta Verde</option>
                       <option>Verde</option>
                       <option>Verde punta Azul</option>
                       <option>Azul</option>
@@ -188,7 +188,8 @@
                         <span class="input-group-text"><i class="fas fa-camera"></i></span>
                       </div>
                       <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="exampleInputFile" control-id="ControlID-3">
+                        <input type="file" class="custom-file-input" id="exampleInputFile" control-id="ControlID-3"
+                          value="/dist/img/user1-128x128">
                         <label class="custom-file-label">Seleccione su foto</label>
                       </div>
                     </div>
@@ -201,7 +202,7 @@
                       </div>
                       <input type="text" class="form-control"
                         data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="" inputmode="text"
-                        control-id="ControlID-25" placeholder="(___) ___-____">
+                        control-id="ControlID-25" placeholder="(___) ___-____" value="3513624961">
                     </div>
                   </div>
                   <div>
@@ -210,7 +211,8 @@
                       <div class="row">
                         <div class="form-group col-4">
                           <label>Nombre</label>
-                          <input type="text" class="form-control" placeholder="Nombre del Contacto de Emergencia">
+                          <input type="text" class="form-control" placeholder="Nombre del Contacto de Emergencia"
+                            value="Alicia Cabrera">
                         </div>
                         <div class="form-group col-4">
                           <label>Teléfono</label>
@@ -220,12 +222,14 @@
                             </div>
                             <input type="text" class="form-control"
                               data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask=""
-                              inputmode="text" control-id="ControlID-25" placeholder="(___) ___-____">
+                              inputmode="text" control-id="ControlID-25" placeholder="(___) ___-____"
+                              value="3517255025">
                           </div>
                         </div>
                         <div class="form-group col-4">
                           <label>Relacion</label>
-                          <input type="text" class="form-control" placeholder="Relacion con el Contacto de Emergencia">
+                          <input type="text" class="form-control" placeholder="Relacion con el Contacto de Emergencia"
+                            value="Madre">
                         </div>
                       </div>
                     </div>
@@ -235,7 +239,7 @@
                     <select class="form-control select2" style="width: 100%;">
                       <option disabled selected>Seleccione el dojang</option>
                       <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
+                      <option selected>Dojang el poder cordobe</option>
                       <option>Dojang el poder cordobe</option>
                       <option>Dojang el poder cordobe</option>
                       <option>Dojang el poder cordobe</option>
