--- a/admin/index_admin.html
+++ b/admin/index_admin.html
@@ -92,18 +92,29 @@
             <div class="container-fluid">
               <!-- Small boxes (Stat box) -->
               <div class="row">
-                <div class="col-lg-4 col-6">
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-info">
                     <div class="inner">
-                      <h3>Taekwondistas</h3>
-                      <p>Administrar Taekwondistas</p>
+                      <h3>Practicantes</h3>
+                      <p>Administrar Practicantes</p>
                     </div>
-                    <a href="administrar_taekwondistas.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="administrar_practicantes.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-4 col-6">
+                <div class="col-lg-6 col-6">
+                  <!-- small box -->
+                  <div class="small-box bg-danger">
+                    <div class="inner">
+                      <h3>Instructores</h3>
+                      <p>Administrar Instructores</p>
+                    </div>
+                    <a href="administrar_instructores.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
+                  </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-success">
                     <div class="inner">
@@ -114,7 +125,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-4 col-6">
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-warning">
                     <div class="inner">
