--- a/practicante/modificar_datos.html
+++ b/practicante/modificar_datos.html
@@ -212,7 +212,7 @@
 
                   <div class="card-footer">
                     <button type="submit" class="btn btn-default" control-id="ControlID-10">Cancelar</button>
-                    <button type="submit" class="btn btn-primary float-right" control-id="ControlID-9">Guardar</button>
+                    <button type="submit" class="btn btn-primary float-right" control-id="ControlID-9">Solicitar cambios</button>
                   </div>
               </form>
             </div>
