--- a/sabonim/editar_taekwondista.html
+++ b/sabonim/editar_taekwondista.html
@@ -100,7 +100,7 @@
           <div class="col-md-12 mx-auto">
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">FORMULARIO TAEKWONDISTA</h3>
+                <h3 class="card-title">FORMULARIO SABONIM</h3>
               </div>
               <form>
                 <div class="card-body">
@@ -117,6 +117,10 @@
                   <div class="form-group">
                     <label>Correo electronico</label>
                     <input type="text" class="form-control" placeholder="Ingrese su correo electronico" value="lucasmgodoycabrera@hotmail.com">
+                  </div>
+                  <div class="form-group">
+                    <label>Certificado</label>
+                    <input type="text" class="form-control" placeholder="Ingrese su numero de certificado" value="123456789">
                   </div>
                   <div class="row">
                     <div class="form-group col-4">
@@ -155,31 +159,6 @@
                       <option>Sin especificar</option>
                       </select>
                       </div>
-                  </div>
-                  <div class="form-group">
-                    <label>Categoria</label>
-                    <select class="form-control select2" style="width: 100%;">
-                      <option disabled>Seleccione el color del cinto</option>
-                      <option>Blanco</option>
-                      <option>Blanco punta Amarilla</option>
-                      <option>Amarillo</option>
-                      <option selected>Amarillo punta Verde</option>
-                      <option>Verde</option>
-                      <option>Verde punta Azul</option>
-                      <option>Azul</option>
-                      <option>Azul punta Roja</option>
-                      <option>Roja</option>
-                      <option>Roja punta Negra</option>
-                      <option>Negro I</option>
-                      <option>Negro II</option>
-                      <option>Negro III</option>
-                      <option>Negro IV</option>
-                      <option>Negro V</option>
-                      <option>Negro VI</option>
-                      <option>Negro VII</option>
-                      <option>Negro VIII</option>
-                      <option>Negro IX</option>
-                    </select>
                   </div>
                   <div class="form-group">
                     <label>Foto</label>
@@ -234,24 +213,10 @@
                       </div>
                     </div>
                   </div>
-                  <div class="form-group">
-                    <label>Dojang</label>
-                    <select class="form-control select2" style="width: 100%;">
-                      <option disabled selected>Seleccione el dojang</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option selected>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                    </select>
-                  </div>
 
                   <div class="card-footer">
                     <button type="submit" class="btn btn-default" control-id="ControlID-10">Cancelar</button>
-                    <button type="submit" class="btn btn-primary float-right" control-id="ControlID-9">Guardar</button>
+                    <button type="submit" class="btn btn-primary float-right" control-id="ControlID-9">Solicitar cambios</button>
                   </div>
               </form>
             </div>
