--- a/admin/editar_instructor.html
+++ b/admin/editar_instructor.html
@@ -100,7 +100,7 @@
           <div class="col-md-12 mx-auto">
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">FORMULARIO TAEKWONDISTAS</h3>
+                <h3 class="card-title">FORMULARIO INSTRUCTOR</h3>
               </div>
               <form>
                 <div class="card-body">
@@ -117,6 +117,10 @@
                   <div class="form-group">
                     <label>Correo electronico</label>
                     <input type="text" class="form-control" placeholder="Ingrese su correo electronico" value="lucasmgodoycabrera@hotmail.com">
+                  </div>
+                  <div class="form-group">
+                    <label>Certificado</label>
+                    <input type="number" class="form-control" placeholder="Ingrese su numero de certificado" value="123456789">
                   </div>
                   <div class="row">
                     <div class="form-group col-4">
@@ -237,7 +241,7 @@
                   <div class="form-group">
                     <label>Dojang</label>
                     <select class="form-control select2" style="width: 100%;">
-                      <option disabled selected>Seleccione el dojang</option>
+                      <option disabled selected>Seleccione el dojang a cargo</option>
                       <option>Dojang el poder cordobe</option>
                       <option selected>Dojang el poder cordobe</option>
                       <option>Dojang el poder cordobe</option>
